# PhysXWorkbench

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_DX12.md  README_OmniPVD.md  additional_visualization.txt  force_visualization.txt  heatmap_implementation.txt  instancing_code.txt  line_mesh.txt  new_imgui.txt  replace_imgui.py
.claude/: settings.json
scenes/: README.md  example_scene.json
shaders/: PBR_PS.hlsl  PBR_VS.hlsl  PhysicsPS.hlsl  PhysicsVS.hlsl
src/: CommandLineArgs.cpp  CommandLineArgs.h  main.cpp  main_dx12.cpp  main_omnipvd.cpp
src/dx12/: DX12Renderer.cpp  DX12Renderer.h  DX12Renderer_Part2.cpp  DX12Renderer_Part3.cpp  d3dx12.h
src/simulation/: DeformableVolumeManager.cpp  DeformableVolumeManager.h  ExperimentController.cpp  ExperimentController.h  PerformanceProfiler.cpp  PerformanceProfiler.h  SceneLoader.cpp  SceneLoader.h  SimulationRecorder.cpp  SimulationRecorder.h
src/simulation/batch/: BatchSimulationRunner.cpp  BatchSimulationRunner.h  CommonMetrics.cpp  CommonMetrics.h  CommonTerminationConditions.cpp  CommonTerminationConditions.h  IMetric.h  ITerminationCondition.h  MSERSteadyStateCondition.cpp  MSERSteadyStateCondition.h
src/simulation/bonding/: Bond.h  BondFormationRules.cpp  BondFormationRules.h  BondTypes.cpp  BondTypes.h  BondableEntity.cpp  BondableEntity.h  BondableEntityDef.h  BondingIntegration.h  BondingSiteDef.h  DemoBondingScenes.h  DynamicBondManager.cpp  DynamicBondManager.h  IBondFormationRule.h  IBondType.h  PropertyMap.h
